fixtures/frontend/milestone-2/invalid/value-annotation-type-mismatch/main.aivi
val answer:Text = 42
